@@ -181,7 +181,7 @@ public class SaleOrderController {
       if (saleOrder.getId() != null) {
 
         Partner supplierPartner = null;
-        List<Long> saleOrderLineIdSelected = new ArrayList<>();
+        List<Long> saleOrderLineIdSelected;
         Boolean isDirectOrderLocation = false;
         Map<String, Object> values = getSelectedId(request, response, saleOrder);
         supplierPartner = (Partner) values.get("supplierPartner");
@@ -254,7 +254,7 @@ public class SaleOrderController {
       ActionRequest request, ActionResponse response, SaleOrder saleOrder) throws AxelorException {
     Partner supplierPartner = null;
     List<Long> saleOrderLineIdSelected = new ArrayList<>();
-    Map<String, Object> values = new HashMap<String, Object>();
+    Map<String, Object> values = new HashMap<>();
     Boolean isDirectOrderLocation = false;
 
     if (saleOrder.getDirectOrderLocation()
@@ -280,7 +280,7 @@ public class SaleOrderController {
           JPA.em()
               .find(
                   Partner.class,
-                  new Long(
+                  Long.valueOf(
                       (Integer)
                           ((Map) request.getContext().get("supplierPartnerSelect")).get("id")));
       values.put("supplierPartner", supplierPartner);
@@ -288,7 +288,7 @@ public class SaleOrderController {
           (String) request.getContext().get("saleOrderLineIdSelected");
 
       for (String saleOrderId : saleOrderLineIdSelectedStr.split(",")) {
-        saleOrderLineIdSelected.add(new Long(saleOrderId));
+        saleOrderLineIdSelected.add(Long.valueOf(saleOrderId));
       }
       values.put("saleOrderLineIdSelected", saleOrderLineIdSelected);
       values.put("isDirectOrderLocation", isDirectOrderLocation);
@@ -399,13 +399,13 @@ public class SaleOrderController {
         // No confirmation popup, sale orders are content in a parameter list
         List<Map> saleOrderMap = (List<Map>) request.getContext().get(lineToMerge);
         for (Map map : saleOrderMap) {
-          saleOrderIdList.add(new Long((Integer) map.get("id")));
+          saleOrderIdList.add(Long.valueOf((Integer) map.get("id")));
         }
       } else {
         // After confirmation popup, sale order's id are in a string separated by ","
         String saleOrderIdListStr = (String) request.getContext().get(lineToMerge);
         for (String saleOrderId : saleOrderIdListStr.split(",")) {
-          saleOrderIdList.add(new Long(saleOrderId));
+          saleOrderIdList.add(Long.valueOf(saleOrderId));
         }
         fromPopup = true;
       }
@@ -550,28 +550,30 @@ public class SaleOrderController {
           JPA.em()
               .find(
                   PriceList.class,
-                  new Long((Integer) ((Map) request.getContext().get("priceList")).get("id")));
+                  Long.valueOf((Integer) ((Map) request.getContext().get("priceList")).get("id")));
     }
     if (request.getContext().get("contactPartner") != null) {
       commonContactPartner =
           JPA.em()
               .find(
                   Partner.class,
-                  new Long((Integer) ((Map) request.getContext().get("contactPartner")).get("id")));
+                  Long.valueOf(
+                      (Integer) ((Map) request.getContext().get("contactPartner")).get("id")));
     }
     if (request.getContext().get("team") != null) {
       commonTeam =
           JPA.em()
               .find(
                   Team.class,
-                  new Long((Integer) ((Map) request.getContext().get("team")).get("id")));
+                  Long.valueOf((Integer) ((Map) request.getContext().get("team")).get("id")));
     }
     if (request.getContext().get("stockLocation") != null) {
       commonLocation =
           JPA.em()
               .find(
                   StockLocation.class,
-                  new Long((Integer) ((Map) request.getContext().get("stockLocation")).get("id")));
+                  Long.valueOf(
+                      (Integer) ((Map) request.getContext().get("stockLocation")).get("id")));
     }
 
     if (!fromPopup && (existContactPartnerDiff || existPriceListDiff || existTeamDiff)) {
@@ -895,7 +897,7 @@ public class SaleOrderController {
       ActionRequest request, ActionResponse response) {
     try {
       SaleOrder saleOrder = request.getContext().asType(SaleOrder.class);
-      List<String> productList = new ArrayList<String>();
+      List<String> productList = new ArrayList<>();
       for (SaleOrderLine saleOrderLine : saleOrder.getSaleOrderLineList()) {
         if (saleOrderLine.getAnalyticDistributionTemplate() == null) {
           productList.add(saleOrderLine.getProductName());
